<resources>
    <string name="app_name">GitHubApp</string>
    <string name="full_name">Nama Lengkap</string>
    <string name="company">Perusahaan:</string>
    <string name="location">Lokasi</string>
    <string name="following">Following</string>
    <string name="follower">Follower</string>
    <string name="lokasi">Lokasi:</string>
    <string name="repository">Repository:</string>
    <string name="avatar">avatar</string>
    <string name="splash_screen">splash_screen</string>
    <string name="usr_search"> Search User </string>
    <string name="search_hint">Masukkan Username</string>
    <string name="main_page"> Silahkan klik tombol search dan cari username yang anda ingin temukan</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_transform">Transform</string>
    <string name="menu_reflow">Reflow</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_settings">Settings</string>
    <string name="fab_content_description">Represents a view to invoke an action</string>
    <string name="image_view_item_transform_content_description">Represents an image view in the
        item
    </string>
    <string name="setting">Setting</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="fab_favorite">fab_favorite</string>


</resources>


